--- a/src/partials/index_Header.html
+++ b/src/partials/index_Header.html
@@ -1,1 +1,19 @@
-<h1>header</h1>
+<header class="header">
+    <nav class="nav">
+        <ul class="nav__list">
+            <li><a class="nav--link sub3" href="">Главная</a></li>
+            <li><a class="nav--link sub3" href="">Обо мне</a></li>
+            <li><a class="nav--link sub3" href="">Портфолио</a></li>
+            <li><a class="nav--link sub3" href="">Контакты</a></li>
+        </ul>
+
+        <div class="nav__lang">
+            <div class="nav__lang--country">
+                <svg class="flag">
+                  <use xlink:href="img/sprite.svg#rus"></use>
+                </svg>
+                <p class="sub3">RU</p>
+            </div>
+        </div>
+    </nav>
+</header>
