ADD: switcher animation

--- a/src/partials/index_Header.html
+++ b/src/partials/index_Header.html
@@ -8,11 +8,25 @@
         </ul>
 
         <div class="nav__lang">
-            <div class="nav__lang--country">
+            <div class="nav__lang--country eng">
+                <svg class="flag">
+                  <use xlink:href="img/sprite.svg#eng"></use>
+                </svg>
+                <p class="sub3">EN</p>
+            </div>
+
+            <div class="nav__lang--country rus">
                 <svg class="flag">
                   <use xlink:href="img/sprite.svg#rus"></use>
                 </svg>
                 <p class="sub3">RU</p>
+            </div>
+
+            <div class="nav__lang--country ukr">
+                <svg class="flag">
+                  <use xlink:href="img/sprite.svg#ukr"></use>
+                </svg>
+                <p class="sub3">UA</p>
             </div>
         </div>
     </nav>
