--- a/src/partials/index_Header.html
+++ b/src/partials/index_Header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <nav class="nav">
         <ul class="nav__list">
-            <li><a class="nav--link sub3" href="">Главная</a></li>
+            <li><a id="translate1" class="nav--link sub3" href="">Главная</a></li>
             <li><a class="nav--link sub3" href="">Обо мне</a></li>
             <li><a class="nav--link sub3" href="">Портфолио</a></li>
             <li><a class="nav--link sub3" href="">Контакты</a></li>
