ADD: switcher animation

--- a/src/partials/index_Header.html
+++ b/src/partials/index_Header.html
@@ -7,22 +7,22 @@
             <li><a class="nav--link sub3" href="">Контакты</a></li>
         </ul>
 
-        <div class="nav__lang">
-            <div id="rus" class="nav__lang--country">
+        <div class="nav__lang [ js-nav__lang ]">
+            <div data-country="1" id="rus" class="nav__lang--country [ js-nav__lang--country ]">
                 <svg class="flag">
                   <use xlink:href="img/sprite.svg#rus"></use>
                 </svg>
                 <p class="sub3">RU</p>
             </div>
 
-            <div id="eng" class="nav__lang--country">
+            <div data-country="2" id="eng" class="nav__lang--country [ js-nav__lang--country ]">
                 <svg class="flag">
                   <use xlink:href="img/sprite.svg#eng"></use>
                 </svg>
                 <p class="sub3">EN</p>
             </div>
 
-            <div id="ukr" class="nav__lang--country">
+            <div data-country="3" id="ukr" class="nav__lang--country [ js-nav__lang--country ]">
                 <svg class="flag">
                   <use xlink:href="img/sprite.svg#ukr"></use>
                 </svg>
