--- a/src/partials/index_Header.html
+++ b/src/partials/index_Header.html
@@ -8,18 +8,18 @@
         </ul>
 
         <div class="nav__lang [ js-nav__lang ]">
-            <div data-country="1" id="rus" class="nav__lang--country [ js-nav__lang--country ]">
-                <svg class="flag">
-                  <use xlink:href="img/sprite.svg#rus"></use>
-                </svg>
-                <p class="sub3">RU</p>
-            </div>
-
-            <div data-country="2" id="eng" class="nav__lang--country [ js-nav__lang--country ]">
+            <div data-country="1" id="eng" class="nav__lang--country [ js-nav__lang--country ]">
                 <svg class="flag">
                   <use xlink:href="img/sprite.svg#eng"></use>
                 </svg>
                 <p class="sub3">EN</p>
+            </div>
+
+            <div data-country="2" id="rus" class="nav__lang--country [ js-nav__lang--country ]">
+                <svg class="flag">
+                  <use xlink:href="img/sprite.svg#rus"></use>
+                </svg>
+                <p class="sub3">RU</p>
             </div>
 
             <div data-country="3" id="ukr" class="nav__lang--country [ js-nav__lang--country ]">
@@ -30,4 +30,9 @@
             </div>
         </div>
     </nav>
+
+    <div class="header__wrapper">
+        <img src="img/vector.svg">
+    </div>
+
 </header>
