--- a/src/partials/index_Header.html
+++ b/src/partials/index_Header.html
@@ -32,7 +32,13 @@
     </nav>
 
     <div class="header__wrapper">
-        <img src="img/vector.svg">
+        <img class="header__portrait" src="img/vector.svg">
+
+        <div class="header__inner">
+            <h1 class="title js-headerTitle">Екатерина Ракитова</h1>
+            
+            <h2 class="js-headerSubTitle">дизайнер веб-интерфейсов</h2>
+        </div>
     </div>
 
 </header>
