--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,32 +1,32 @@
-@include font-face("Cormorant", "../fonts/Cormorant-Medium", 500, normal);
+@include font-face("Cormorant", "Cormorant-Medium", 500, normal);
 
 @mixin Cormorant-Medium {
     font-family: 'Cormorant';
     font-weight: 500;
 }
 
-@include font-face("Cormorant", "../fonts/Cormorant-Regular", 400, normal);
+@include font-face("Cormorant", "Cormorant-Regular", 400, normal);
 
 @mixin Cormorant-Regular {
     font-family: 'Cormorant';
     font-weight: 400;
 }
 
-@include font-face("OpenSans", "../fonts/OpenSans-Light", 300, normal);
+@include font-face("OpenSans", "OpenSans-Light", 300, normal);
 
 @mixin OpenSans-Light {
     font-family: 'OpenSans';
     font-weight: 300;
 }
 
-@include font-face("OpenSans", "../fonts/OpenSans-Regular", 400, normal);
+@include font-face("OpenSans", "OpenSans-Regular", 400, normal);
 
 @mixin OpenSans-Regular {
     font-family: 'OpenSans';
     font-weight: 400;
 }
 
-@include font-face("OpenSans", "../fonts/OpenSans-SemiBold", 600, normal);
+@include font-face("OpenSans", "OpenSans-SemiBold", 600, normal);
 
 @mixin OpenSans-SemiBold {
     font-family: 'OpenSans';
