--- a/src/scss/mixins/_font-face.scss
+++ b/src/scss/mixins/_font-face.scss
@@ -2,7 +2,7 @@
     @font-face {
         src: url("../resources/fonts/#{$url}.woff2") format("woff2"), url("../resources/fonts/#{$url}.woff") format("woff"), url("../resources/fonts/#{$url}.ttf") format("truetype");
         font-family: "#{$font-family}";
-        font-weight: "#{$font-weight}";
+        font-weight: $font-weight;
         font-style: $style;
         font-display: swap;
     }
