--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,7 +1,7 @@
-$container-offset: 0px;
+$maxLayoutWidth: 1440;
+$minLayoutWidth: 320;
+$container-offset: 0;
 $container-width: 1440px;
-
-$black: #000000;
-$white: #FFFFFF;
-
-$MAIN_TEXT: #0F0F0F;
+$black: #000;
+$white: #fff;
+$mainTextColor: #0f0f0f;
