--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,11 +1,10 @@
 @import "./base/reset";
-
 @import "vars";
 @import "mixins/font-face";
+@import "mixins/adaptive-font";
 @import "fonts";
 @import "settings";
-
 @import "./components/text";
-
+@import "./components/headerPortrait";
 @import "./layout/header";
 @import "./layout/nav";
