--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -1,115 +1,123 @@
 .nav {
+    position: relative;
     display: flex;
     justify-content: space-between;
     margin: 0 130px;
-    padding-left: 114px;
     padding-bottom: 35px;
-    position: relative;
+    padding-left: 114px;
+    transform: translateY(-100px);
+    transition: 0.6s;
 
     &__list {
         display: flex;
-        justify-content: center;
         align-items: top;
+        justify-content: center;
         margin: 0 auto;
-
-        padding: 20px;
         border-radius: 10px;
-        background: radial-gradient(50% 2513.09% at 50% 50%, #F0F0F3 0%, rgba(240, 240, 243, 0) 100%);;
-        
-        & li:not(:last-child) {
+        padding: 20px;
+        background: radial-gradient(50% 2513.09% at 50% 50%, #f0f0f3 0%, rgba(240 240 243 / 0%) 100%);
+
+        li:not(:last-child) {
             margin-right: 45px;
         }
     }
 
-    &--link {
-        text-transform: uppercase;
-        -webkit-background-clip: text;
-        background: linear-gradient(90deg, #F63F44 0%, #F17C08 100%);
-        background-size: 200% 200%;
-        background-clip: text;
-        -webkit-background-clip:text;
-        transition: color 0.2s ease-in-out;
-
-        &:hover {
-            color: rgba(0,0,0,0);
-        }
-    }
-
     &__lang {
-        width: 115px;
-        background-color: #F0F0F3;
-        box-shadow: 2px 2px 8px rgba(51, 51, 51, 0.1);
-        padding: 12px 24px;
-        border-radius: 24px;
-        cursor: pointer;
-
+        position: absolute;
+        right: 0;
+        top: 0;
         display: flex;
         flex-direction: column;
         justify-content: center;
-
-        position: absolute;
-        right: 0;
-
-        &--country {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            & .flag {
-                width: 22px;
-                height: 16px;
-                margin-right: 12px;
-            }
-
-            & p {
-                width: 31px;
-            }
-
-            &[data-country='1'] {
-                transition: all 0.3s;
-                margin: 0;
-                opacity: 0;
-                height: 0px;
-                order: 1;
-                transform: translateY(-144px);
-            }
-
-            &[data-country='2'] {
-                transition: all 0.3s;
-                order: 2; 
-            }
-
-            &[data-country='3'] {
-                transition: all 0.3s;
-                opacity: 0;
-                height: 0px;
-                order: 3;
-                transform: translateY(144px);
-            }
-        }
+        border-radius: 24px;
+        padding: 12px 24px;
+        box-shadow: 2px 2px 8px rgba(51 51 51 / 10%);
+        background-color: #f0f0f3;
+        cursor: pointer;
 
         &:hover {
             transition: 0.3s;
 
-            & .nav__lang--country {
-                &[data-country='1'] {
+            .nav__lang--country {
+                &[data-country="1"] {
                     height: 29px;
-                    transition: height transform 0.3s;
                     opacity: 1;
-                    transform: translateY(0px); 
+                    transform: translateY(0);
+                    transition: height transform 0.3s;
                 }
 
-                &[data-country='2'] {
+                &[data-country="2"] {
                     margin: 24px 0;
                 }
 
-                &[data-country='3'] {
+                &[data-country="3"] {
                     height: 29px;
-                    transition: height transform 0.3s;
                     opacity: 1;
-                    transform: translateY(0px);
+                    transform: translateY(0);
+                    transition: height transform 0.3s;
                 }
             }
+        }
+
+        &--name {
+            @include adaptiveFont(18, 24);
+            @include Cormorant-Medium;
+
+            width: 31px;
+            line-height: 100%;
+            color: $mainTextColor;
+        }
+
+        &--country {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .flag {
+                margin-right: 12px;
+                width: 22px;
+                height: 16px;
+            }
+
+            &[data-country="1"] {
+                order: 1;
+                margin: 0;
+                height: 0;
+                opacity: 0;
+                transform: translateY(-144px);
+                transition: all 0.3s;
+            }
+
+            &[data-country="2"] {
+                order: 2;
+                transition: all 0.3s;
+            }
+
+            &[data-country="3"] {
+                order: 3;
+                height: 0;
+                opacity: 0;
+                transform: translateY(144px);
+                transition: all 0.3s;
+            }
+        }
+    }
+
+    &--link {
+        @include adaptiveFont(18, 24);
+        @include Cormorant-Medium;
+
+        line-height: 100%;
+        text-transform: uppercase;
+        color: $mainTextColor;
+        background: linear-gradient(90deg, #f63f44 0%, #f17c08 100%);
+        background-size: 200% 200%;
+        -webkit-background-clip: text;
+        background-clip: text;
+        transition: color 0.2s ease-in-out;
+
+        &:hover {
+            color: rgba(0 0 0 / 0%);
         }
     }
 }
