ADD: nav complete

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,5 +6,6 @@
 @import "settings";
 @import "./components/text";
 @import "./components/headerPortrait";
+@import "./components/burger";
 @import "./layout/header";
 @import "./layout/nav";
