--- a/src/scss/components/_burger.scss
+++ b/src/scss/components/_burger.scss
@@ -3,6 +3,7 @@
     z-index: 1000;
     display: none;
     padding: 0 35px;
+    -webkit-tap-highlight-color: transparent;
     cursor: pointer;
 
     div {
