--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -31,6 +31,7 @@
         border-radius: 24px;
         padding: 12px 24px;
         box-shadow: 2px 2px 8px rgba(51 51 51 / 10%);
+        -webkit-tap-highlight-color: transparent;
         background-color: #f0f0f3;
         cursor: pointer;
 
@@ -109,6 +110,7 @@
         line-height: 100%;
         text-transform: uppercase;
         color: $mainTextColor;
+        -webkit-tap-highlight-color: transparent;
         background: linear-gradient(90deg, #f63f44 0%, #f17c08 100%);
         background-size: 200% 200%;
         -webkit-background-clip: text;
