--- a/src/modules/nav/_nav.scss
+++ b/src/modules/nav/_nav.scss
@@ -1,7 +1,6 @@
 .nav {
     position: fixed;
-
-    // left: -100%
+    left: -100%;
     z-index: 3;
     display: flex;
     justify-content: right;
