--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -4,5 +4,7 @@
 @include font-face(Gilroy, Gilroy-Semibold, 600, normal);
 
 // Bebas
-
 @include font-face(Bebas, bebasneuecyrillic, 400, normal);
+
+// Inter
+@include font-face(Inter, Inter-Medium, 500, normal);
