--- a/src/scss/base/_settings.scss
+++ b/src/scss/base/_settings.scss
@@ -64,7 +64,14 @@ a {
     font-weight: 400;
     font-size: 48px;
     line-height: 40.8px;
-    letter-spacing: 5%;
+    letter-spacing: 0.05em;
+}
+
+.h3 {
+    font-family: "Bebas", sans-serif;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 40px;
 }
 
 .text16 {
