--- a/src/views/index.html
+++ b/src/views/index.html
@@ -50,6 +50,9 @@
     <body class="body">
         @include('../modules/nav/nav.html')
         @include('../modules/header/header.html')
+        <main class="main">
+            @include('../modules/about/about.html')
+        </main>
 
         <!-- https://vk.com/@vk_it-webp?t2fs=232db2370e4cfe3c00_3 -->
         <script src="js/import/modernizr-webp.js"></script>
