--- a/src/modules/header/_header.scss
+++ b/src/modules/header/_header.scss
@@ -6,8 +6,8 @@
     overflow-x: hidden;
     overflow-y: hidden;
     padding-left: $container-offset;
-    width: 100vw;
     height: 100vh;
+    max-width: 100vw;
     background-color: #1B0A35;
 
     &__title {
@@ -62,7 +62,7 @@
 
         &-right {
             position: absolute;
-            right: calc(50vw - ($container-offset / 2));
+            right: calc(50vw - ($container-offset / 2) - 20px);
             bottom: 0;
             z-index: 2;
             width: 45vw;
