ADD: preloader, start intersectionObserver animation

--- a/src/scss/_modules.scss
+++ b/src/scss/_modules.scss
@@ -1,3 +1,4 @@
 @import "../modules/nav/nav";
 @import "../modules/header/header";
 @import "../modules/about/about";
+@import "../modules/preloader/preloader";
