--- a/src/views/index.html
+++ b/src/views/index.html
@@ -48,6 +48,7 @@
         <link rel="stylesheet" href="css/style.min.css">
     </head>
     <body class="body">
+        @include('../modules/preloader/preloader.html')
         @include('../modules/nav/nav.html')
         @include('../modules/header/header.html')
         <main class="main">
