--- a/src/scss/base/_settings.scss
+++ b/src/scss/base/_settings.scss
@@ -42,6 +42,23 @@ a {
     display: none !important;
 }
 
+// animation of appearance
+
+.element-animation {
+    opacity: 0;
+}
+
+.element-animation.element-show {
+    opacity: 1;
+    transition: opacity 1s;
+}
+
+@media (max-width: 530px) {
+    .element-animation {
+        opacity: 1;
+    }
+}
+
 .container {
     margin: 0 auto;
     padding: 0 $container-offset;
