ADD: chat final desktop

--- a/src/scss/_modules.scss
+++ b/src/scss/_modules.scss
@@ -1,4 +1,6 @@
 @import "../modules/nav/nav";
 @import "../modules/header/header";
 @import "../modules/about/about";
+@import "../modules/about/chat";
+@import "../modules/about/tabs";
 @import "../modules/preloader/preloader";
