--- a/src/views/index.html
+++ b/src/views/index.html
@@ -53,6 +53,7 @@
         @include('../modules/header/header.html')
         <main class="main">
             @include('../modules/about/about.html')
+            @include('../modules/services/services.html')
         </main>
 
         <!-- https://vk.com/@vk_it-webp?t2fs=232db2370e4cfe3c00_3 -->
