--- a/src/modules/about/_chat.scss
+++ b/src/modules/about/_chat.scss
@@ -97,11 +97,13 @@
         color: $black;
         background-color: #E3DAFD;
         opacity: 0;
+        visibility: hidden;
         transform: translateY(100px);
         transition: all 0.4s;
 
         &-isTyped {
             opacity: 1 !important;
+            visibility: visible;
             transform: translateY(0) !important;
             transition: all 0.4s;
         }
