--- a/src/modules/about/_tabs.scss
+++ b/src/modules/about/_tabs.scss
@@ -1,5 +1,6 @@
 .tabs {
     margin-top: 64px;
+    width: 960px;
 
     &__header {
         display: flex;
@@ -25,16 +26,158 @@
     &__info {
         height: 0;
         opacity: 0;
+        visibility: hidden;
         transition: opacity 0.3s;
-
-        p:not(:last-child) {
-            margin-bottom: 24px;
-        }
 
         &-isVisible {
             height: 100%;
             opacity: 1 !important;
+            visibility: visible;
             transition: opacity 0.3s;
+        }
+    }
+
+    &__general {
+        p {
+            width: 800px;
+
+            &:not(:last-child) {
+                margin-bottom: 24px;
+            }
+        }
+    }
+
+    &__year {
+        display: flex;
+        align-items: center;
+
+        svg {
+            margin-right: 7px;
+            width: 18px;
+            height: 18px;
+        }
+
+        h4 {
+            font-family: "Bebas", sans-serif;
+            font-weight: 400;
+            font-size: 24px;
+            line-height: 24px;
+            letter-spacing: 0.96px;
+            -webkit-text-stroke-width: 0.6px;
+            -webkit-text-stroke-color: #C8B5FC;
+            color: $black;
+        }
+    }
+
+    &__way {
+        display: flex;
+
+        svg {
+            margin-right: 7px;
+            width: 18px;
+            height: 58px;
+        }
+
+        p {
+            margin-top: 9px;
+            line-height: 1;
+        }
+    }
+
+    &__certificate {
+        margin-left: 18px;
+    }
+
+    &__experience {
+        p:not(:last-child) {
+            margin-bottom: 24px;
+        }
+
+        p:last-child {
+            margin-bottom: 32px;
+        }
+    }
+
+    &__dropdown {
+        margin-bottom: 15px;
+    }
+
+    &__customer {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        cursor: pointer;
+
+        h4 {
+            color: #C8B5FC;
+        }
+    }
+
+    &__plus {
+        position: relative;
+        width: 32px;
+        height: 32px;
+        transition: all 0.2s;
+
+        &-isActive {
+            transform: rotate(90deg) !important;
+            transition: all 0.2s;
+
+            div:first-child {
+                opacity: 0 !important;
+                transition: all 0.2s;
+            }
+        }
+
+        div {
+            position: absolute;
+            left: 50%;
+            top: 3px;
+            width: 2px;
+            height: 26px;
+            background-color: #C8B5FC;
+        }
+
+        div:first-child {
+            opacity: 1;
+            transform: rotate(90deg);
+            transition: all 0.2s;
+        }
+    }
+
+    &__description {
+        margin-top: 8px;
+        height: 0;
+        opacity: 0;
+        visibility: hidden;
+        transform: translateY(-20px);
+        transition: all 0.3s;
+
+        &-isVisible {
+            height: 20px !important;
+            opacity: 1 !important;
+            visibility: visible !important;
+            transform: translateY(0) !important;
+            transition: all 0.3s;
+        }
+
+        p {
+            margin-bottom: 0 !important;
+        }
+    }
+
+    &__instrument {
+        display: flex;
+        align-items: center;
+
+        svg {
+            margin-right: 30px;
+            width: 28px;
+            height: 28px;
+        }
+
+        &:not(:last-child) {
+            margin-bottom: 25px;
         }
     }
 }
