--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,7 +11,7 @@
 @import "base/settings";
 
 // // Компоненты
-@import "./components/buttonBig";
+@import "./components/button";
 @import "./components/svg";
 
 // Модули
