--- a/src/modules/about/_tabs.scss
+++ b/src/modules/about/_tabs.scss
@@ -39,8 +39,6 @@
 
     &__general {
         p {
-            width: 800px;
-
             &:not(:last-child) {
                 margin-bottom: 24px;
             }
@@ -58,9 +56,10 @@
         }
 
         h4 {
+            @include adaptiveFont(17, 24, 320, 1440);
+
             font-family: "Bebas", sans-serif;
             font-weight: 400;
-            font-size: 24px;
             line-height: 24px;
             letter-spacing: 0.96px;
             -webkit-text-stroke-width: 0.6px;
@@ -154,7 +153,7 @@
         transition: all 0.3s;
 
         &-isVisible {
-            height: 20px !important;
+            height: 100px !important;
             opacity: 1 !important;
             visibility: visible !important;
             transform: translateY(0) !important;
