--- a/src/scss/base/_settings.scss
+++ b/src/scss/base/_settings.scss
@@ -70,17 +70,21 @@ a {
 }
 
 .h1 {
+    @include adaptiveFont(44, 96, 320, 1440);
+
     font-family: "Bebas", sans-serif;
     font-weight: 400;
-    font-size: 96px;
-    line-height: 96px;
+    // font-size: 96px;
+    line-height: 100%;
 }
 
 .h2 {
+    @include adaptiveFont(32, 48, 320, 1440);
+
     font-family: "Bebas", sans-serif;
     font-weight: 400;
-    font-size: 48px;
-    line-height: 40.8px;
+    // font-size: 48px;
+    line-height: 85%;
     letter-spacing: 0.05em;
 }
 
@@ -91,15 +95,29 @@ a {
     line-height: 40px;
 }
 
+.buttonBigText {
+    @include adaptiveFont(18, 22, 320, 1440);
+
+    // font-size: 22px;
+    font-weight: 600;
+    line-height: 160%;
+}
+
+.buttonSmallText {
+
+}
+
 .text16 {
     font-weight: 400;
     font-size: 16px;
 }
 
 .text20 {
+    @include adaptiveFont(13, 20, 320, 1440);
+
     font-weight: 500;
-    font-size: 20px;
-    line-height: 28px;
+    // font-size: 20px;
+    line-height: 140%;
 }
 
 .text24 {
